# devilsai

./: AUTHORS  CMakeLists.txt  ChangeLog  README  devilsai.desktop
data/: CMakeLists.txt  blurShader.frag  contrastShader.frag  defaut.opt  fadeShader.frag  options.xml
data/carte/: 1-AncientLands-Monsters.lst  1-Birnam-Lands1.lst  1-Birnam-Lands2.lst  1-Birnam-Monsters.lst  1-GladeSaints-Lands1.lst  1-GladeSaints-Lands2.lst  1-GladeSaints-Monsters.lst  1-IceRoad-AncientLands-Lands1.lst  1-IceRoad-AncientLands-Lands2.lst  1-IceRoad-Monsters.lst  1-Noirefontaine-Monsters.lst  1-OutsideLands.lst  1-ways.lst  1.map  1000.lst  1004.lst  101.map  101107.lst  101200.lst  1105.lst  1241.lst  CMakeLists.txt  birnam-thecaveofthespider.xml  birnam.xml  didact.map  didact_attaque.lst  didact_bael.lst  didact_coffre.lst  didact_manneq1.lst  didact_manneq2.lst  didact_manneq3.lst  didact_pay.lst  didact_perso.lst  tutorial.xml
data/chapitre/: 0.chp  1.chp  2.chp  CMakeLists.txt  devilsai.xml  tutorial.xml
data/gui/: CMakeLists.txt  character.xml  confirm-exit-game.xml  console.xml  conversation.xml  dialog-screen.xml  ingame-menu.xml  ingame-skillbar.xml  ingame-toolbar.xml  inventory.xml  journal.xml  load-game.xml  loading.xml  main-menu.xml  new-game.xml  options.xml  player-dead.xml  skill-panel.xml  storage-box.xml
data/img/: Baliste.img  CMakeLists.txt  Curtis.img  Fluellen.img  Fontaine.img  Gnome.img  Gower.img  Guerrier.img  Horst.img  Joueur.img  Mannequin.img  Ogre.img  Orc.img  Stolas.img  Troll.img  Zombie.img  didact_attaque_bael.img  inertitem-wall01.img  inertitem-wall02.img  inertitem-wall03.img  inertitem-wall04.img  monster-spider-greyscale.img  monster-spider-red.img
data/individu/: 1.mvt  10000.pay  10001.pay  10002.pay  10004.pay  10006.pay  10007.pay  10008.pay  10009.pay  10100.pay  10101.pay  10102.pay  10103.pay  10104.pay  10105.pay  10106.pay  10107.pay  10108.pay  10109.pay  10201.pay  10204.pay  10206.pay  10207.pay  10208.pay  10209.pay  10210.pay  10301.pay  10304.pay  10306.pay  10307.pay  10308.pay  10309.pay  2.mvt  200.one  20001.pay  20002.pay  20003.pay  20004.pay  20005.pay  20006.pay  (+98 more)
data/lng/: 1-FreeIceRoad-Advice.lng  1-FreeIceRoad-GoToFluellen.lng  1-FreeIceRoad-GoToGower.lng  1-FreeIceRoad-Reward.lng  1-InvasionGlade-1.lng  1-InvasionGlade-2.lng  1-InvasionGlade-Intro1.lng  1-InvasionGlade-Intro2.lng  1-KillStolas-Beginning.lng  1-KillStolas-Fluellen.lng  1-KillStolas-GoToCamp.lng  1-RescueFluellensCamp-Beginning.lng  1-RescueFluellensCamp-Fluellen.lng  1-RescueFluellensCamp-GoToCamp.lng  1-RescueFluellensCamp-Reminder.lng  1-UnknownStone-Discovered.lng  1-UnknownStone-End.lng  1-UnknownStone-Given.lng  1-UnknownStone-GivenBack.lng  1-UnknownStone-Gower.lng  1-UnknownStone-Scroll.lng  1-Wizard-Beginning.lng  1-Wizard-Wizard.lng  CMakeLists.txt  EndOfGame.lng  actionneur_1_1.lng  actionneur_1_2.lng  birnam.xml  birnam_EN.xml  birnam_FR.xml  desc_objets.lng  devilsai.lng  devilsai.xml  devilsai_EN.xml  devilsai_FR.xml  gui.xml  gui_EN.xml  gui_FR.xml  journal.lng  langues  (+30 more)
data/music/: CMakeLists.txt
data/object/: CMakeLists.txt  attackpotion.lua  bascinet.lua  cuirass.lua  cuirass0.lua  defensepotion.lua  diamondring.lua  diamondring0.lua  fabricboots.lua  gladius.lua  gladius0.lua  greathelm.lua  greathelm0.lua  healpotion.lua  pavis.lua  platearmor.lua  sabaton.lua  sabaton0.lua  sapphirering.lua  shield.lua  shield0.lua  spatha.lua  speedpotion.lua  spidervenom.lua  steelboots.lua  steelhelmet.lua  steelplatearmor.lua  steelshield.lua  steelsword.lua  stoneofhighlands.lua  unidentifiedstone.lua
data/quest/: 1-FreeIceRoad.lua  1-GowersWorries.lua  1-InvasionGladeSaints.lua  1-KillStolas.lua  1-RescueFluellensCamp.lua  1-UnknownStone.lua  1-Wizard.lua  CMakeLists.txt  tutorial.lua
data/shared_trigger/: CMakeLists.txt  change_place.lua  door.lua  heal.lua  world_change.lua
data/skill/: CMakeLists.txt  achieve.lua  attack.lua  finishoff.lua  fireball.lua  healpotion.lua
data/sound/: CMakeLists.txt
src/: CMakeLists.txt  config.h.cmake  gamedata.cpp  gamedata.h  inventoryScreenManager.cpp  inventoryScreenManager.h  skillbarManager.cpp  skillbarManager.h  storageBoxScreenManager.cpp  storageBoxScreenManager.h
src/Attributs/: Attributs.cpp  Attributs.h  Objets.cpp
src/Bibliotheque/: Bibliotheque.h  Constantes.h  Decorations.cpp  Images.cpp  Langues.cpp  Templates.h  Utilitaires.cpp  luaFunctions.cpp  luaFunctions.h  music.cpp
src/Carte/: Carte.cpp  Carte.h  Collisions.cpp  Interactions.cpp  ListesChainees.cpp
src/ElementsCarte/: Actionneurs.cpp  ChargementElements.cpp  Coffres.cpp  Elements.cpp  ElementsCarte.h  GestionIndividus.cpp  GestionJoueurs.cpp  Individus.cpp  IndividusCommuns.cpp  IndividusUniques.cpp  Joueurs.cpp  Paysages.cpp  Projectiles.cpp
src/Jeu/: GestionSauvegardes.cpp  Jeu.cpp  Jeu.h  Missions.cpp  Options.cpp  Sauvegarde.cpp  main.cpp  main.cppiS5892.new  options.h
src/devilsai-gui/: console.cpp  console.h  conversation.cpp  conversation.h  dialogScreen.cpp  inventory.cpp  inventory.h  journal.cpp  journal.h  skillPanel.cpp  skillPanel.h  storageBox.cpp  storageBox.h
src/devilsai-resources/: Carte.cpp  Carte.h  manager.h  pack.cpp  pack.h  quests.cpp  quests.h  shaders.cpp  shaders.h  skill.cpp  skill.h  stats.cpp  stats.h  wearableItem.cpp  wearableItem.h
src/devilsai-screens/: dialogScreen.cpp  dialogScreen.h  journal.cpp  journal.h
src/gui/: CMakeLists.txt  button.cpp  button.h  dropDownList.cpp  dropDownList.h  inputField.cpp  inputField.h  progressBar.cpp  progressBar.h  scrollingList.cpp  scrollingList.h  style.cpp  style.h  textWidget.cpp  textWidget.h  widget.cpp  widget.h  window.cpp  window.h
src/imageManager/: CMakeLists.txt  HSL.cpp  HSL.h  animation.cpp  animation.h  assets.cpp  image.cpp  image.h  imageManager.cpp  imageManager.h
src/musicManager/: CMakeLists.txt  musicManager.cpp  musicManager.h
src/textManager/: CMakeLists.txt  plainText.cpp  plainText.h  richText.cpp  richText.h  textManager.cpp  textManager.h
src/tools/: CMakeLists.txt  aStar.cpp  aStar.h  button.cpp  math.h  (+20 more)
(+14 files in other folders)
