
set(carte
    1-AncientLands-Monsters.lst
    1-Birnam-Lands1.lst
    1-Birnam-Lands2.lst
    1-Birnam-Monsters.lst
    1-IceRoad-AncientLands-Lands1.lst
    1-IceRoad-Monsters.lst
    1-ways.lst
    101.map
	101107.lst
	101200.lst
    birnam.xml
    tutorial.xml
)

install(FILES ${carte} DESTINATION ${dataDestination}/carte)

