
set(gui
    confirm-exit-game.xml
    dialog-screen.xml
    ingame-menu.xml
    ingame-skillbar.xml
    ingame-toolbar.xml
    inventory.xml
    load-game.xml
    loading.xml
    main-menu.xml
    new-game.xml
    options.xml
    player-dead.xml
    storage-box.xml
)

install(FILES ${gui} DESTINATION ${dataDestination}/gui)

