
set(gui
    character.xml
    confirm-exit-game.xml
    conversation.xml
    ingame-menu.xml
    ingame-skillbar.xml
    ingame-toolbar.xml
    inventory.xml
    journal.xml
    loading.xml
    main-menu.xml
    new-game.xml
    options.xml
    player-dead.xml
    storage-box.xml
)

install(FILES ${gui} DESTINATION ${dataDestination}/gui)

