
set(gui
    character.xml
    confirm-exit-game.xml
    conversation.xml
    ingame-menu.xml
    ingame-skillbar.xml
    ingame-toolbar.xml
    inventory.xml
    journal.xml
    main-menu.xml
    options.xml
    player-dead.xml
    storage-box.xml
)

install(FILES ${gui} DESTINATION ${dataDestination}/gui)

