
set(img
    00001.png
    02001.png
    02002.png
    02003.png
    02004.png
    02005.png
    02120.png
    02121.png
    02122.png
    02123.png
    02124.png
    02125.png
    02126.png
    02127.png
    02128.png
    02129.png
    20001.png
    20002.png
    20003.png
    20004.png
    20005.png
    20006.png
    20007.png
    20008.png
    20009.png
    20010.png
    20011.png
    20012.png
    21001.png
    21002.png
    21003.png
    21004.png
    30200.png
    30201.png
    30202.png
    30203.png
    30204.png
    30205.png
    90001.png
    10000200.png
    10010000.png
    Art.png
    Baliste.img
    BarreEnergie.png
    BarreRecup.png
    BarreVie.png
    BoutonCompetences.png
    BoutonEquipement.png
    BoutonJournal.png
    BoutonPersonnage.png
    C101.png
    C102.png
    C301.png
    C401.png
    Curtis.img
    didact_attaque_bael.img
    Fluellen.img
    Fond.png
    FondCoffre.png
    FondInventaire.png
    FondMiniaturesCompetences.png
    FondObjet_50_50.png
    FondObjet_75_75.png
    FondObjet_75_100.png
    Fontaine.img
    Gnome.img
    Gower.img
    Guerrier.img
    gui-button-background-156x46.png
    gui-dialog-background-488x308.png
    gui-input-field-background-356x46.png
    gui-menu-button.png
    gui-rest-button.png
    gui-top-border.png
    Horst.img
    inertitem-tree01.png
    inertitem-tree02.png
    inertitem-tree03.png
    inertitem-tree04.png
    inertitem-tree05.png
    inertitem-tree06.png
    inertitem-tree07.png
    inertitem-tree08.png
    inertitem-tree09.png
    inertitem-tree10.png
    inertitem-tree11.png
    inertitem-tree12.png
    inertitem-tree13.png
    inertitem-tree14.png
    inertitem-tree15.png
    inertitem-tree16.png
    inertitem-wall01.img
    inertitem-wall02.img
    inertitem-wall03.img
    inertitem-wall04.img
    Joueur.img
    Mannequin.img
    monster-spider-greyscale.img
    monster-spider-red.img
    O000-.png
    O000+.png
    O001-.png
    O001+.png
    O002-.png
    O002+.png
    O003-.png
    O003+.png
    O100-.png
    O100+.png
    O101-.png
    O101+.png
    O102-.png
    O102+.png
    O103-.png
    O103+.png
    O200-.png
    O200+.png
    O201-.png
    O201+.png
    O202-.png
    O202+.png
    O203-.png
    O203+.png
    O300-.png
    O300+.png
    O301-.png
    O301+.png
    O302-.png
    O302+.png
    O303-.png
    O303+.png
    O400-.png
    O400+.png
    O401-.png
    O401+.png
    O402-.png
    O402+.png
    O403-.png
    O403+.png
    O500-.png
    O500+.png
    O501-.png
    O501+.png
    O502-.png
    O502+.png
    O503-.png
    O503+.png
    O600-.png
    O600+.png
    O601-.png
    O601+.png
    O602-.png
    O602+.png
    O603-.png
    O603+.png
    O700-.png
    O700+.png
    O800-.png
    O800+.png
    Ogre.img
    Orc.img
    Repos.png
    Stolas.img
    Troll.img
    Zombie.img
)

install(FILES ${img} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/devilsai/img)

