
set(img
    21001.png
    21002.png
    21003.png
    21004.png
    10000200.png
    10010000.png
    Art.png
    Baliste.img
    BarreEnergie.png
    BarreRecup.png
    BarreVie.png
    BoutonCompetences.png
    BoutonEquipement.png
    BoutonJournal.png
    BoutonPersonnage.png
    C101.png
    C102.png
    C301.png
    C401.png
    Curtis.img
    didact_attaque_bael.img
    Fluellen.img
    Fond.png
    FondCoffre.png
    FondInventaire.png
    FondMiniaturesCompetences.png
    FondObjet_50_50.png
    FondObjet_75_75.png
    FondObjet_75_100.png
    Fontaine.img
    Gnome.img
    Gower.img
    Guerrier.img
    ground-dirtygrass01.png
    ground-dirtygrass02.png
    ground-dirtygrass03.png
    ground-dirtyway01.png
    ground-dirtyway02.png
    ground-dirtyway03.png
    ground-dirtyway04.png
    ground-dirtyway05.png
    ground-dirtyway06.png
    ground-dirtyway07.png
    ground-dirtyway08.png
    ground-dirtyway09.png
    ground-dirtyway10.png
    ground-tile01.png
    ground-tile02.png
    ground-tile03.png
    gui-button-background-156x46.png
    gui-dialog-background-488x308.png
    gui-dialog-background-608x383.png
    gui-dropdownlist-background-156x34.png
    gui-input-field-background-356x46.png
    gui-menu-button.png
    gui-rest-button.png
    gui-top-border.png
    Horst.img
    inertitem-building01.png
    inertitem-building02.png
    inertitem-building03.png
    inertitem-building04.png
    inertitem-building05.png
    inertitem-building06.png
    inertitem-building07.png
    inertitem-building08.png
    inertitem-building09.png
    inertitem-building10.png
    inertitem-building11.png
    inertitem-building12.png
    inertitem-stone01.png
    inertitem-stone02.png
    inertitem-stone03.png
    inertitem-stone04.png
    inertitem-stone05.png
    inertitem-stone06.png
    inertitem-tree01.png
    inertitem-tree02.png
    inertitem-tree03.png
    inertitem-tree04.png
    inertitem-tree05.png
    inertitem-tree06.png
    inertitem-tree07.png
    inertitem-tree08.png
    inertitem-tree09.png
    inertitem-tree10.png
    inertitem-tree11.png
    inertitem-tree12.png
    inertitem-tree13.png
    inertitem-tree14.png
    inertitem-tree15.png
    inertitem-tree16.png
    inertitem-wall01.img
    inertitem-wall02.img
    inertitem-wall03.img
    inertitem-wall04.img
    Joueur.img
    Mannequin.img
    monster-spider-greyscale.img
    monster-spider-red.img
    O000-.png
    O000+.png
    O001-.png
    O001+.png
    O002-.png
    O002+.png
    O003-.png
    O003+.png
    O100-.png
    O100+.png
    O101-.png
    O101+.png
    O102-.png
    O102+.png
    O103-.png
    O103+.png
    O200-.png
    O200+.png
    O201-.png
    O201+.png
    O202-.png
    O202+.png
    O203-.png
    O203+.png
    O300-.png
    O300+.png
    O301-.png
    O301+.png
    O302-.png
    O302+.png
    O303-.png
    O303+.png
    O400-.png
    O400+.png
    O401-.png
    O401+.png
    O402-.png
    O402+.png
    O403-.png
    O403+.png
    O500-.png
    O500+.png
    O501-.png
    O501+.png
    O502-.png
    O502+.png
    O503-.png
    O503+.png
    O600-.png
    O600+.png
    O601-.png
    O601+.png
    O602-.png
    O602+.png
    O603-.png
    O603+.png
    O700-.png
    O700+.png
    O800-.png
    O800+.png
    Ogre.img
    Orc.img
    Repos.png
    Stolas.img
    Troll.img
    Zombie.img
)

install(FILES ${img} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/devilsai/img)

