
set(individu
    203.one
    204.one
    320.com
    205.one
    400.one
    allies.xml
    ballista.xml
    buildings.xml
    fluellen.xml
    fountainOfLife.xml
    gower.xml
    grounds.xml
    misc.xml
    ogres.xml
    orcs.xml
    player.xml
    spiders.xml
    stones.xml
    trees.xml
    tutorial-bael.xml
    tutorial-curtis.xml
    tutorial-player.xml
    tutorial-species.xml
    walls.xml
    zombies.xml
)

install(FILES ${individu} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/devilsai/individu)

