
set(individu
    205.one
    400.one
    allies.xml
    ballista.xml
    buildings.xml
    fluellen.xml
    fountainOfLife.xml
    gower.xml
    grounds.xml
    misc.xml
    ogres.xml
    orcs.xml
    player.xml
    spiders.xml
    stones.xml
    trees.xml
    trolls.xml
    tutorial-bael.xml
    tutorial-curtis.xml
    tutorial-player.xml
    tutorial-species.xml
    walls.xml
    zombies.xml
)

install(FILES ${individu} DESTINATION ${dataDestination}/individu)

