
set(individu
    allies.xml
    ballista.xml
    buildings.xml
    fluellen.xml
    fountainOfLife.xml
    gower.xml
    grounds.xml
    horst.xml
    misc.xml
    ogres.xml
    orcs.xml
    player.xml
    spiders.xml
    stolas.xml
    stones.xml
    trees.xml
    trolls.xml
    tutorial-bael.xml
    tutorial-curtis.xml
    tutorial-player.xml
    tutorial-species.xml
    walls.xml
    zombies.xml
)

install(FILES ${individu} DESTINATION ${dataDestination}/individu)

