
set(lng
    birnam_EN.xml
    birnam_FR.xml
    desc_objets.lng
    devilsai_EN.xml
    devilsai_FR.xml
    gui_FR.xml
    EndOfGame.lng
    journal.lng
    noms_competences.lng
    noms_objets.lng
    places_EN.xml
    places_FR.xml
    species_EN.xml
    species_FR.xml
    tutorial-01.lng
    tutorial-02.lng
    tutorial-03.lng
    tutorial-04.lng
    tutorial-05.lng
    tutorial-06.lng
    tutorial-07.lng
    tutorial-08.lng
    tutorial-09.lng
    tutorial-10.lng
    tutorial-11.lng
    tutorial-12.lng
    tutorial-13.lng
)

install(FILES ${lng} DESTINATION ${dataDestination}/lng)

