
set(lng
    birnam_EN.xml
    birnam_FR.xml
    devilsai_EN.xml
    devilsai_FR.xml
    gui_EN.xml
    gui_FR.xml
    noms_competences.lng
    objects_EN.xml
    objects_FR.xml
    places_EN.xml
    places_FR.xml
    species_EN.xml
    species_FR.xml
    tutorial_EN.xml
    tutorial_FR.xml
)

install(FILES ${lng} DESTINATION ${dataDestination}/lng)

