
set(object
    attackpotion.lua
    bascinet.lua
    cuirass0.lua
    cuirass.lua
    defensepotion.lua
    diamondring0.lua
    diamondring.lua
    fabricboots.lua
    gladius0.lua
    gladius.lua
    greathelm0.lua
    greathelm.lua
    healpotion.lua
    pavis.lua
    platearmor.lua
    sabaton0.lua
    sabaton.lua
    sapphirering.lua
    shield0.lua
    shield.lua
    spatha.lua
    speedpotion.lua
    spidervenom.lua
    steelboots.lua
    steelhelmet.lua
    steelplatearmor.lua
    steelshield.lua
    steelsword.lua
    stoneofhighlands.lua
    unidentifiedstone.lua
)

install(FILES ${object} DESTINATION ${CMAKE_INSTALL_PREFIX}/share/devilsai/object)

